# Observatory-Control

./: .gitignore  Plan.odp  astronomyapi_credentials.txt
CameraControl/: D3500.json  Messier_Catalog.csv  NPF  SequenceCaptureWithSettings.sh  SimpleSequenceCapture.sh  SimpleSequenceCaptureBulbVersion.sh  capture_scriptV2.bash
CaptureSettingsCalculator/: CalculateSettings.cpp  Classes.cpp  Messier_Catalog.csv  Notes
OldStuff/: BigLensFocalLengthsApertures.csv  npf-calculator.cpp  sample-camera-output-big-lens.txt  sample_camera_output.txt
OldStuff/libcurl-testing/: Date.h  astronomyapi_interface.cpp  getbodyposition_output.json
libcurl-testing/: Date.cpp  astronomyapi_interface.cpp  getbodyposition_output.json  main  main.cpp  prettyoutput.json
ros2_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
ros2_ws/src/cpp_srvcli/: CMakeLists.txt  package.xml
ros2_ws/src/more_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/my_package/: CMakeLists.txt  package.xml
ros2_ws/src/tutorial_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/tutorial_interfaces/msg/: Sphere.msg
ros2observatory_ws/cmake/: FindGPHOTO2.cmake
ros2observatory_ws/src/data_camera/: CMakeLists.txt  package.xml
ros2observatory_ws/src/data_camera/src/: camera.cpp  image_subscriber.cpp  libgphoto2_functions.cpp
ros2observatory_ws/src/interfaces/: CMakeLists.txt  package.xml
ros2observatory_ws/src/interfaces/action/: Sequence.action
ros2observatory_ws/src/interfaces/msg/: DataImage.msg
ros2observatory_ws/src/interfaces/srv/: BatteryRequest.srv  IntStatus.srv  IsoRequest.srv  StringRequest.srv  StringStatus.srv
src/data_camera/: CMakeLists.txt
src/data_camera/src/: camera.cpp  file_publishing_test.cpp  image_publishing_test.cpp  image_subscriber.cpp
src/interfaces/: CMakeLists.txt
src/interfaces/action/: Sequence.action
src/interfaces/msg/: DataFile.msg  DataImage.msg
src/interfaces/srv/: IntRequest.srv  IntStatus.srv
